--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.12",
+    "@tanstack/react-query": "^5.36.0",
     "@tanstack/react-router": "^1.18.3",
     "effector": "^23.2.0",
     "effector-react": "^23.2.0",
