--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.12",
+    "@mui/x-date-pickers": "^6.20.0",
     "@tanstack/react-query": "^5.36.0",
     "@tanstack/react-router": "^1.18.3",
+    "date-fns": "^3.6.0",
     "effector": "^23.2.0",
     "effector-react": "^23.2.0",
     "react": "^18.2.0",
